se agrego un footer basico

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -95,5 +95,17 @@
         </div>
       </div>
     </div>
+    <br>
+    <div class="container-fluid">
+      <div class="row">
+        <div>
+        <footer>
+          <p>Autor: Gaston Ruiz</p>
+          <p>Copyright:2022</p>
+        </footer>
+      </div>
+      </div>
+    </div>      
+    
   </body>
 </html>
