--- a/Videos.html
+++ b/Videos.html
@@ -53,6 +53,10 @@
           </div>
         </div>
       </div>
+      <footer>
+        <p>Autor: Gaston Ruiz</p>
+        <p>Copyright:2022</p>
+      </footer>
     
 </body>
 </html>
