--- a/Galeria.html
+++ b/Galeria.html
@@ -52,5 +52,9 @@
           </div>
         </div>
       </div>
+      <footer>
+        <p>Autor: Gaston Ruiz</p>
+        <p>Copyright:2022</p>
+      </footer>
 </body>
 </html>
