--- a/Contacto.html
+++ b/Contacto.html
@@ -53,6 +53,22 @@
         </div>
       </div>
     </div>
+    <br>
+    <div class="container">
+      <div class="row">
+        <div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+        </div>
+
+      </div>
+    </div>
     <footer>
       <p>Autor: Gaston Ruiz</p>
       <p>Copyright:2022</p>
